# peace

./: .gitignore  AUTHORS  Makefile.am  Makefile.common.am  Makefile.in  NEWS  README  configure.ac  mpi.supp  peace.sln  peace.vcproj  peace_library.vcproj
peace/: COPYING  ChangeLog  Makefile.am  Makefile.common.am  NEWS  README  configure.ac  mpi.supp  peace_library.vcproj
peace/EAST/: Makefile
peace/EAST/C++/: Alignment.cpp  Alignment.h  AlignmentAlgorithm.cpp  AlignmentAlgorithm.h  CalculatedOvlDistance.h  D2.cpp  D2.h  ESTAssembly.cpp  ESTAssembly.h  Graph.cpp  Graph.h  InclusionNodes.cpp  InclusionNodes.h  IntMatrix.h  Main.cpp  Node.h  OvlDistance.cpp  OvlDistance.h  Param.h  Prim.cpp  Prim.h  ProgressReporter.cpp  ProgressReporter.h  Reconstruction.cpp  Reconstruction.h  SingleBase.cpp  SingleBase.h  SixTuple.cpp  SixTuple.h  SixTuplesGeneration.cpp  SixTuplesGeneration.h  east.sh  estFile.fa
peace/EAST/Java/: analysis.properties  mstFile.mst
peace/EAST/scripts/: README.txt
peace/decagon/: README.txt
peace/decagon/scoreCalc/: AlignmentAlgorithm.cpp  BlastCommon.h  DecagonException.cpp  DecagonException.h  Helpers.cpp  Makefile.am  MegaBlastData.h  ScoreCalculator.cpp  ScoreCalculator.h
peace/docs/: PEACE_manual_gui.docx
peace/docs/c++/: peace.doxygen
peace/examples/: Makefile.am  UsingPeace.cpp  examples.sln  examples.vcproj  generate_d2.cpp  standalone_d2.cpp
peace/gui/: ReadMe.txt
peace/gui/src/: .classpath  overview.html
peace/papers/EAST.bioinf/: all.bib  cover.doc  (+3 more)
peace/reports/: 4-27-09.txt  5-11-09.txt  5-6-09.txt
peace/scripts/: README  annotateESTFile.py  countSingletons.py  format.py  multiruns.py  pipeline.py  sort.py
peace/src/: AdaptiveTwoPassD2.cpp  AdaptiveTwoPassD2.h  Assembler.h  AssemblerFactory.cpp  BatonAnalyzer.h  BatonESTData.cpp  BatonESTData.h  BipartiteData.h  CLU.cpp  CLU.h  CachedESTInfo.h  CachedESTInfoHelper.h  ClusterMaker.cpp  ClusterMaker.h  ClusterMakerFactory.cpp  ClusterMakerFactory.h  CommonalityRegion.cpp  D2.cpp  D2.h  D2Zim.cpp  D2Zim.h  EST.cpp  EST.h  ESTAnalyzer.cpp  ESTAnalyzer.h  ESTAnalyzerFactory.cpp  ESTAnalyzerFactory.h  ESTCodec.cpp  ESTCodec.h  FMWSCA.cpp  FMWSCA.h  FWAnalyzer.cpp  FWAnalyzer.h  FileLoader.cpp  FileLoader.h  Filter.h  FilterChain.h  FilterFactory.cpp  HTMLHeader.h  HashMap.h  (+68 more)
peace/tools/: Align.cpp  Align.h  AlignmentAlgorithm.cpp  AlignmentAlgorithm.h  Common.h  DrawMatrix.cpp  DrawMatrix.h  ExtractReads.cpp  HashMap.h  MSTguiNode.h  Makefile.am  Matcher.cpp  Matcher.h  PrimeFeatures.cpp  PrimeFeatures.h  RandomizeReads.cpp  ShowAlignment.cpp  ShowAlignment.h  ShowMST.cpp  ShowMST.h  Tool.cpp  Tool.h  XFigHelper.cpp  XFigHelper.h
peace/visualStudio/: assembly.vcproj  peace.sln
src/: AdaptiveTwoPassD2.h  Assembler.cpp  Assembler.h  AssemblerFactory.h  Baton.h  BatonAnalyzer.cpp  BatonESTData.cpp  BatonESTData.h  CLU.cpp  CLU.h  CachedESTInfo.h  ClusterMaker.cpp  ClusterMaker.h  ClusterMakerFactory.cpp  ClusterMakerFactory.h  CommonalityRegion.h  D2.cpp  D2.h  D2Zim.cpp  D2Zim.h  EST.cpp  EST.h  ESTAnalyzer.cpp  ESTAnalyzer.h  ESTAnalyzerFactory.cpp  ESTCodec.cpp  ESTCodec.h  ESTCustomData.h  FMWSCA.cpp  FMWSCA.h  FWAnalyzer.cpp  FWAnalyzer.h  FileLoader.h  Filter.cpp  Filter.h  FilterChain.cpp  FilterChain.h  FilterFactory.cpp  FilterFactory.h  HashMap.h  (+70 more)
src/assembly/: AssemblerFactory.cpp  AssemblerFactory.h  AssemblySubSystem.cpp
src/baton/: AlignmentInfo.h  Baton.cpp  Baton.h  BatonAlignmentInfo.cpp  BatonAlignmentInfo.h  BatonAnalyzer.cpp  BatonAssembler.cpp  BatonAssembler.h  BatonAssemblerManager.h  BatonAssemblerWorker.cpp  BatonAssemblerWorker.h  BatonList.cpp  BatonList.h  BatonListCache.cpp  BatonListCache.h  ContigMaker.cpp  DefaultSequenceAligner.cpp  Makefile.am  Segment.h  SequenceAligner.cpp  SequenceAligner.h  WindowPair.h  WindowPairList.h
src/clustering/: AdaptiveMSTClusterMaker.cpp  AdaptiveMSTClusterMaker.h  AdaptiveTwoPassD2.cpp  AdaptiveTwoPassD2.h  AlignmentAnalyzer.cpp  AlignmentAnalyzer.h  BipartiteData.h  ClusterMakerFactory.cpp  ClusteringSubSystem.cpp  ClusteringSubSystem.h  D2.cpp  D2.h  D2Zim.cpp  D2Zim.h  ESTAnalyzerFactory.cpp  ESTAnalyzerFactory.h  FMWSCA.h  FWAnalyzer.h  Heuristic.cpp  Heuristic.h  HeuristicChain.cpp  HeuristicChain.h  HeuristicFactory.cpp  HeuristicFactory.h  MSTCache.h  MSTClusterMaker.cpp  MSTClusterMaker.h  MSTHeapCache.h  MSTMultiListCache.h  Makefile.am  MatrixFileAnalyzer.cpp  MergingClusterMaker.cpp  MergingClusterMaker.h  NNMSTClusterMaker.cpp  NNMSTClusterMaker.h  NewUVHeuristic.cpp  NewUVHeuristic.h  NonAdaptiveMSTClusterMaker.h  OldTVHeuristic.cpp  OldTwoPassD2.cpp  (+16 more)
src/filtering/: Filter.cpp  Filter.h  FilterChain.cpp  FilteringSubSystem.cpp  LengthFilter.cpp  Makefile.am
src/framework/: ArgParser.cpp  ArgParser.h  Component.cpp  Component.h  MPIHelper.cpp  MPIHelper.h  Makefile.am  SubSystem.cpp  Utilities.cpp  Utilities.h
src/input/: FASTAFile.cpp  FASTAFile.h  InputFile.cpp  InputFile.h  InputFileFactory.cpp  InputFileFactory.h  InputSubSystem.cpp  InputSubSystem.h  Makefile.am  OnDemandESTList.cpp  OnDemandESTList.h  PDBListFile.cpp  PDBListFile.h
src/output/: ACEWriter.cpp  ACEWriter.h  ClusterWriter.cpp  ClusterWriter.h  LogLevel.cpp  LogLevel.h  MSTWriter.h  Makefile.am  OutputSubSystem.cpp  OutputSubSystem.h  RedirectingStreamBuf.h  SAMWriter.h  StandardOutput.cpp
src/shared/: Assembler.cpp  Assembler.h  ClusterMaker.cpp  Contig.cpp  ContigListener.cpp  ContigListener.h  EST.cpp  EST.h  ESTAnalyzer.h  ESTList.cpp  ESTList.h  ESTListListener.h  MSTCluster.cpp  MSTCluster.h  MSTNode.cpp  Makefile.am  NtDistr.h  RuntimeContext.cpp  RuntimeContext.h
tools/: AlignmentAlgorithm.cpp  AlignmentAlgorithm.h  Common.h  DrawMatrix.cpp  DrawMatrix.h  ExtractReads.cpp  ExtractReads.h  HashMap.h  Makefile.am  Matcher.cpp  PrimeFeatures.cpp  PrimeFeatures.h  RandomizeReads.cpp  RandomizeReads.h  ShowAlignment.cpp  ShowAlignment.h  ShowMST.cpp  ShowMST.h  ShowScores.cpp  ShowScores.h  Tool.cpp  Tool.h  XFigHelper.cpp  XFigHelper.h  main.cpp
tools/launcher/: launcher.cpp  launcher.rc  resource.h
(+883 files in other folders)
